--- a/app/views/games/new.js.erb
+++ b/app/views/games/new.js.erb
@@ -1,1 +1,3 @@
-$("#add-form-<%= @data[:igdb_id] %>").html("<%= j(render partial: 'cover_view/add_form', locals: { data: @data }) %>");
+$("#add-form-<%= @data[:igdb_id] %>").html("<%= j(render partial: 'cover_view/add_form', locals: { data: @data, owned: @owned }) %>");
+activateForm('add', '<%= @data[:igdb_id] %>');
+updatePlatformIcon('add', '<%= @data[:igdb_id] %>');
