--- a/app/assets/stylesheets/panels_view.scss
+++ b/app/assets/stylesheets/panels_view.scss
@@ -307,15 +307,23 @@ hr.md {
     outline: none;
 }
 
-#game_platform:hover + span .cf-platform-icon svg {
-    fill: $dark_grey;
-}
+// #game_platform:hover + span .cf-platform-icon svg {
+//     fill: $dark_grey;
+// }
 
-#collection:hover + span .cf-collection-icon {
-    rect, polygon, line {
-       stroke: $dark_grey;
-    }
-}
+// #collection:hover + span .cf-collection-icon {
+//     rect, polygon, line {
+//        stroke: $dark_grey;
+//     }
+// }
+
+// .cf-physical:hover + svg path {
+//     fill: $dark_grey;
+// }
+
+// .cf-digital:hover + svg {
+//     fill: $dark_grey;
+// }
 
 .cf-platform-green svg {
     fill: #49ab8a;
@@ -347,16 +355,8 @@ hr.md {
     fill: $light_grey;
 }
 
-.cf-physical:hover + svg path {
-    fill: $dark_grey;
-}
-
 .cf-digital + svg {
     fill: $light_grey;
-}
-
-.cf-digital:hover + svg {
-    fill: $dark_grey;
 }
 
 .cf-physical:checked + svg path {
@@ -583,7 +583,7 @@ hr.md {
 }
 
 .pd-arr {
-    display: none;
+    opacity: 0;
     position: absolute;
     bottom: 0;
     margin: 0px;
@@ -591,6 +591,7 @@ hr.md {
     background: #666;
     color: #ffffffa3;
     z-index: 200;
+    transition: opacity 0.2s ease-in-out;
 }
 
 .pd-arr.right {
@@ -617,7 +618,7 @@ hr.md {
 }
 
 .pd-slide:hover .pd-arr {
-    display: block;
+    opacity: 1;
 }
 
 .g-google {
