--- a/app/views/games/edit_form.js.erb
+++ b/app/views/games/edit_form.js.erb
@@ -1,1 +1,2 @@
 $("#edit-form-<%= @game.id %>").html("<%= j(render partial: 'panels_view/edit_form', locals: { game: @game, collection: @collection }) %>");
+preselectPlatform('edit', <%= @game.id %>, <%= @game.platform %>);
