--- a/app/assets/stylesheets/panels_view.scss
+++ b/app/assets/stylesheets/panels_view.scss
@@ -219,6 +219,10 @@ span.gap {
     min-width: 230px;
 }
 
+.add-form {
+    background: #f9f9f9f2;
+}
+
 hr.md {
     border-top: 2px solid #bababa;
     margin: 0 0 20px 0;
