Add another divider to game info. Fix styling of summary in game info. Add status/category to game info.

--- a/app/assets/stylesheets/panels_view.scss
+++ b/app/assets/stylesheets/panels_view.scss
@@ -553,8 +553,8 @@ hr.md {
 }
 
 .g-summary {
-    @extend .info-summary;
-
+    font-size: 14px;
+    text-align: justify;
     margin: 0px;
     line-height: 27px;
 }
