--- a/app/assets/stylesheets/game_info.scss
+++ b/app/assets/stylesheets/game_info.scss
@@ -18,6 +18,41 @@
     // margin-top: 15px;
 }
 
+.i-no-cover {
+    width: $no_cover_width;
+    height: $no_cover_height;
+    border: 2px dashed $dark_grey;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    color: $dark_grey;
+    box-sizing: border-box;
+    position: relative;
+    background: #313131;
+
+    div {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        width: $no_cover_width - 4px;
+        height: 100px;
+        text-align: center;
+        margin-top: -50px;
+    }
+
+    p {
+        margin-top: 10px;
+    }
+}
+
+.gw-b {
+    background: none;
+    border-radius: 3px;
+    font-size: 13px;
+    border: 2px solid #808080;
+    color: #969696;
+    vertical-align: text-bottom;
+}
+
 .info-year {
     font-size: 14px;
     color: rgba(255, 255, 255, 0.7);
@@ -47,6 +82,17 @@
 .info-summary {
     font-size: 14px;
     text-align: justify;
+    line-height: 22px;
+    margin-top: 0px;
+}
+
+.info-summary:first-letter {
+    font-size: 20px;
+    line-height: 22px;
+}
+
+.btm-m15 {
+    margin-bottom: 15px;
 }
 
 .i-nav {
