--- a/app/views/cover_view/_game_info.html.erb
+++ b/app/views/cover_view/_game_info.html.erb
@@ -1,10 +1,15 @@
 <% igdb_id = game[:igdb_id] %>
 <% game_name = game[:name] %>
-
 <div id="i-<%= igdb_id %>" uk-offcanvas="mode: none; bg-close: true">
     <div class="uk-offcanvas-bar">
         <!-- TITLE & RELEASE YEAR -->
         <h3 class="info-title"><%= game_name %>
+        <% if (status_id = game[:status]) && status_id != 0 %>
+        <button class='gw-b'><%= convert_status(status_id) %></button>
+        <% end %>
+        <% if (category_id = game[:category]) && category_id != 0 %>
+        <button class='gw-b'><%= convert_category(category_id) %></button>
+        <% end %>
         <% if game[:first_release_date]%>
         <span class="info-year">(<%= Time.at(game[:first_release_date]).year %>)</span>
         <% else %>
@@ -16,8 +21,11 @@
         <% if cover %>
         <%= image_tag('', class: 'game-cover info-cover', width: cover[:width], 'data-src' => cover[:url], alt: game_name, 'draggable' => 'false', 'uk-img' => "target: #gc-#{ igdb_id }" ) %>
         <% else %>
-        <div class="i-no-cover"><%= svg 'no_image_i' %>
-            <span>No Cover Available</span>
+        <div class="i-no-cover">
+            <div>
+                <%= svg 'no_image_i' %>
+                <p>No Cover Available</p>
+            </div>
         </div>
         <% end %>
         <!-- PLATFORMS -->
@@ -34,25 +42,34 @@
             <% end %>
         </p>
         <% end %>
+        <!-- ADD-FORM -->
+        <a id='ofc' class="rosa" uk-icon="plus"></a>
+        <!-- DIVIDER -->
+        <% summary = get_summary(game, 280, 50) %>
+        <% screens = game[:screenshots] %>
+        <% if summary || screens %>
+            <% extra_class = summary ? 'btm-m15' : '' %>
+            <%= content_tag(:hr, nil, class: extra_class ) %>
+        <% end %>
         <!-- SUMMARY -->
-        <% if summary = get_summary(game, 280, 50) %>
+        <% if summary %>
         <p class="info-summary"><%= summary[:start] %><% if summary[:end] %><span class="dots" id="dots-<%= igdb_id %>"><%= summary[:span] %><button class="uk-icon-link uk-icon ms-b-down" onclick="myFunction(<%= igdb_id %>)" uk-icon="icon: triangle-down"></button></span> <span id="more-<%= igdb_id %>" class="more"><%= summary[:end] %><button class="uk-icon-link uk-icon ms-b-up" onclick="shortSummary(<%= igdb_id %>)" uk-icon="icon: triangle-up"></button></span>
     </p>
     <% end %>
     <% end %>
     <!-- SLIDESHOW -->
-    <% if screens = game[:screenshots] %>
+    <% if screens %>
     <% urls = screens_urls(screens) %>
     <div class="uk-position-relative md-slide" uk-slideshow="animation: fade" uk-lightbox="toggle: .uk-position-cover; animation: fade">
         <div class="a-spin"><%= svg 'loading' %></div>
         <ul class="uk-slideshow-items md-slide-items">
             <% no_of_screens = 0 %>
             <% urls.each do |url| %>
-                <li>
-                    <%= image_tag('', 'data-src' => url[:small], 'uk-cover' => '', 'uk-img': '') %>
-                    <%= content_tag(:a, '', href: url[:big], class: 'uk-position-cover') %>
-                </li>
-                <% no_of_screens += 1 %>
+            <li>
+                <%= image_tag('', 'data-src' => url[:small], 'uk-cover' => '', 'uk-img': '') %>
+                <%= content_tag(:a, '', href: url[:big], class: 'uk-position-cover') %>
+            </li>
+            <% no_of_screens += 1 %>
             <% end %>
         </ul>
         <!-- SLIDESHOW NAVIGATION -->
@@ -89,4 +106,3 @@
         </div>
     </div>
 </div>
-
