Add game-warning (dlc, cancelled, ...) to game panels.

--- a/app/assets/stylesheets/panels_view.scss
+++ b/app/assets/stylesheets/panels_view.scss
@@ -490,6 +490,11 @@ hr.md {
 
 .g-title {
     margin-bottom: 0px;
+
+    .gw-b {
+        color: #777777;
+        border-color: $light_grey;
+    }
 }
 
 .g-year {
