Move some js scripts. Clean up css code after changes to cover view and game-info.

--- a/app/views/collections/show.js.erb
+++ b/app/views/collections/show.js.erb
@@ -17,3 +17,6 @@ $("#big-c").html("<%= j(render partial: 'my_games', locals: { collection: @colle
 if (refresh) {
   ids.forEach(id => $('#' + id).show());
 }
+
+filter();
+moreInfo();
