--- a/app/views/cover_view/_game_info.html.erb
+++ b/app/views/cover_view/_game_info.html.erb
@@ -51,7 +51,7 @@
         <% end %>
         <!-- SUMMARY -->
         <% if summary %>
-        <p class="info-summary"><%= summary[:start] %><% if summary[:end] %><span class="dots" id="dots-<%= igdb_id %>"><%= summary[:span] %><button class="uk-icon-link uk-icon ms-b-down" onclick="myFunction(<%= igdb_id %>)" uk-icon="icon: triangle-down"></button></span> <span id="more-<%= igdb_id %>" class="more"><%= summary[:end] %><button class="uk-icon-link uk-icon ms-b-up" onclick="shortSummary(<%= igdb_id %>)" uk-icon="icon: triangle-up"></button></span>
+        <p class="info-summary"><%= summary[:start] %><% if summary[:end] %><span class="dots" id="dots-<%= igdb_id %>"><%= summary[:span] %><button class="uk-icon-link uk-icon ms-b-down" onclick="shortSummary(<%= igdb_id %>)" uk-icon="icon: triangle-down"></button></span> <span id="more-<%= igdb_id %>" class="more"><%= summary[:end] %><button class="uk-icon-link uk-icon ms-b-up" onclick="shortSummary(<%= igdb_id %>)" uk-icon="icon: triangle-up"></button></span>
     </p>
     <% end %>
     <% end %>
