--- a/app/views/panels_view/_game_panel.html.erb
+++ b/app/views/panels_view/_game_panel.html.erb
@@ -60,7 +60,7 @@
   <button id="g-hide-<%= id %>" class="g-hide uk-icon-link" uk-icon="chevron-up"></button>
 </div>
 </div>
-<% extra = 'out' if edit_open %>
+<% extra = 'out' if edit_open? %>
 <div id="g-menu-<%= id %>" class="g-menu <%= extra %>">
 <ul >
   <li>
