--- a/app/views/static_pages/_load_more.js.erb
+++ b/app/views/static_pages/_load_more.js.erb
@@ -1,6 +1,8 @@
 $("#show-more").html("<%= j(render :partial => 'results') %>");
 $("#show-more").attr('id', 'showed_more');
 
+flip_offc();
+
 // Fit game title inside no-cover
 textFit(document.getElementsByClassName("no-cover-game-name"), {minFontSize:18, maxFontSize: 26});
 $(".no-cover-game-name").addClass('fitted')
