--- a/app/views/cover_view/_game_info.html.erb
+++ b/app/views/cover_view/_game_info.html.erb
@@ -100,7 +100,7 @@
         <div id="info-links">
             <%= link_to '',"http://www.google.com/search?q=%22#{ game_name.gsub(' ', '+') }%22+video+game" , class: "ex-link google uk-icon-button uk-margin-small-right", target: "_blank", "uk-icon" => "google" %>
             <%= link_to svg('metacritic_icon'),"https://www.metacritic.com/search/game/#{ game_name.gsub(' ', '%20') }/results" , class: "ex-link metacritic uk-icon-button uk-margin-small-right", target: "_blank" %>
-            <button id='i-flipper-<%= igdb_id %>' class="flip"><%= svg 'flip_icon' %></button>
+            <%= content_tag(:button, svg('flip_icon'), class: 'flip') %>
         </div>
     </div>
 </div>
