Add visual clue that add-form from this game is on.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,6 +41,7 @@ $lighter_nt: rgb(197, 197, 197);
 $light_grey: #999;
 $dark_grey: #666;
 $slide_grey: #393939;
+$disabled: #b4b4b4;
 
 @import "cover_view";
 @import "panels_view";
