Save last visited page and offcanvas to cookies. For each user that access on same web browser.

--- a/app/views/static_pages/_load_more.js.erb
+++ b/app/views/static_pages/_load_more.js.erb
@@ -1,7 +1,7 @@
 $("#show-more").html("<%= j(render :partial => 'results') %>");
 $("#show-more").attr('id', 'showed_more');
 
-flip_offc();
+flip_offc('<%= current_user.id %>');
 
 // Fit game title inside no-cover
 textFit(document.getElementsByClassName("no-cover-game-name"), {minFontSize:18, maxFontSize: 26});
