--- a/app/views/static_pages/search_page.js.erb
+++ b/app/views/static_pages/search_page.js.erb
@@ -2,3 +2,4 @@ $("#big-c").html("<%= j(render partial: 'search_page') %>");
 $("li.active").removeClass('active');
 $("#m-search").addClass('active');
 $('input#search-igdb-bar').focus();
+Cookies.set('<%= current_user.id %>-last', 'search', { expires: 30 });
