--- a/app/views/static_pages/_results.html.erb
+++ b/app/views/static_pages/_results.html.erb
@@ -12,16 +12,16 @@
   <% elsif @more_in_off %>
     <div id="show-more">
       <%= form_tag("/search_games", method: :get, remote: true) do %>
-      <%= hidden_field_tag :last_form, @inquiry.last_form %>
-      <%= hidden_field_tag :last_query, @inquiry.query %>
-      <%= hidden_field_tag :last_offset, @inquiry.offset %>
+      <%= hidden_field_tag :last_form, @more_in_off[:last_form] %>
+      <%= hidden_field_tag :last_query, @more_in_off[:query] %>
+      <%= hidden_field_tag :last_offset, @more_in_off[:offset] %>
       <%= submit_tag "Load more",
       class: "cf-add-button",
       data: { disable_with: "Please wait..." } %>
       <% end %>
     </div>
   <% else %>
-    <% if status = @inquiry.status_id == 2 %>
+    <% if @status == 2 %>
       <div class="no-more">
         <button class="cf-add-button" uk-scroll>Can't show you more. Try being more precise.</button>
       </div>
@@ -29,9 +29,7 @@
   <% end %>
 <% else %>
   <div class="no-results">
-    <p>your offset "<%= @inquiry.offset %>"</p>
-    <p>0 results for "<%= @inquiry.input %>"</p>
-    <p>Try using "*" for searching (example: *shadd* > El Shaddai: Ascension of the Metatron)</p>
+    <p>No results</p>
   </div>
 <% end %>
 <div class="scroll-up">
